Done till Blog post

--- a/templates/error.html
+++ b/templates/error.html
@@ -1,2 +1,15 @@
+{% extends 'base.html' %} 
+
+{% block body %} 
+
+
+
 <h1>page not found , try again</h1>
 <a href="{{url_for('index')}}">Back to home page</a>
+
+{% endblock %}
+
+
+{% block title %} 
+Page not found 
+{% endblock %}
